--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -1,173 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED93DFE6-C48D-41ED-991A-90505F8DDA19}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ThemeBrowser</RootNamespace>
-    <AssemblyName>ThemeBrowser</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <FileAlignment>512</FileAlignment>
-    <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>1591</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup>
+    <WarningLevel>4</WarningLevel>
+    <ApplicationIcon>ThemeBrowser.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>ThemeBrowser.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    <Reference Include="System.Windows.Interactivity">
+      <HintPath>C:\Program Files (x86)\Microsoft SDKs\Expression\Blend\.NETFramework\v4.5\Libraries\System.Windows.Interactivity.dll</HintPath>
     </Reference>
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-  </ItemGroup>
-  <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Compile Include="AsyncDelegateCommand.cs" />
-    <Compile Include="BindingProxy.cs" />
-    <Compile Include="BitmapValue.cs" />
-    <Compile Include="ColorToBrushConverter.cs" />
-    <Compile Include="DataPiping.cs" />
-    <Compile Include="DelegateCommand.cs" />
-    <Compile Include="DisposableStreamWrapper.cs" />
-    <Compile Include="Extensions\ColorUtils.cs" />
-    <Compile Include="Extensions\FrameworkExtensions.cs" />
-    <Compile Include="Extensions\GeometryUtils.cs" />
-    <Compile Include="FrameworkElementAdorner.cs" />
-    <Compile Include="Native\GdiNativeMethods.cs" />
-    <Compile Include="HighContrastColor.cs" />
-    <Compile Include="ImageColorPickerBehavior.cs" />
-    <Compile Include="Extensions\ImagingUtils.cs" />
-    <Compile Include="IThemeData.cs" />
-    <Compile Include="NamedItemContainer.cs" />
-    <Compile Include="Native\NativeMethods.cs" />
-    <Compile Include="PreviewImageDialog.xaml.cs">
-      <DependentUpon>PreviewImageDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="PreviewImageDialogViewModel.cs" />
-    <Compile Include="ProgressInfo.cs" />
-    <Compile Include="PropertyGrid.xaml.cs">
-      <DependentUpon>PropertyGrid.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Native\SafeBitmapHandle.cs" />
-    <Compile Include="ResizingAdorner.cs" />
-    <Compile Include="SelectableTextBlock.cs" />
-    <Compile Include="ShowProgressAdornerBehavior.cs" />
-    <Compile Include="ThemeClassViewModel.cs" />
-    <Compile Include="ThemeData.cs" />
-    <Compile Include="ThemeDataExtensions.cs" />
-    <Compile Include="ThemeExtensions.cs" />
-    <Compile Include="ThemeFileComparisonViewModel.cs" />
-    <Compile Include="ThemeFileViewModel.cs" />
-    <Compile Include="ThemePartViewModel.cs" />
-    <Compile Include="ThemeRawProperty.cs" />
-    <Compile Include="ThemeStateViewModel.cs" />
-    <Compile Include="TraceImageDialog.xaml.cs">
-      <DependentUpon>TraceImageDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="DoubleMultiplyConverter.cs" />
-    <Compile Include="MainWindowViewModel.cs" />
-    <Compile Include="ThemePropertyViewModel.cs" />
-    <Compile Include="UxThemeExData.cs" />
-    <Compile Include="ViewModel.cs" />
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="PreviewImageDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="PropertyGrid.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Themes\generic.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="TraceImageDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <None Include="app.manifest" />
-    <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
+    <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PresentationTheme.Aero.Win10\PresentationTheme.Aero.Win10.csproj">
-      <Project>{a6e7c65f-98f7-4297-89ea-cad879719fd6}</Project>
-      <Name>PresentationTheme.Aero.Win10</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
-      <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
-      <Name>PresentationTheme.Aero</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ThemeCore\ThemeCore.csproj">
-      <Project>{839bcdaf-c880-4f9e-b3b6-388c2ae77156}</Project>
-      <Name>ThemeCore</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\PresentationTheme.Aero.Win10\PresentationTheme.Aero.Win10.csproj" />
+    <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj" />
+    <ProjectReference Include="..\ThemeCore\ThemeCore.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="ThemeBrowser.ico" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
