--- a/Source/ThemeCore/ThemeCore.csproj
+++ b/Source/ThemeCore/ThemeCore.csproj
@@ -1,74 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{839BCDAF-C880-4F9E-B3B6-388C2AE77156}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ThemeCore</RootNamespace>
-    <AssemblyName>ThemeCore</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ProjectGuid>{839BCDAF-C880-4F9E-B3B6-388C2AE77156}</ProjectGuid>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NoWarn>1591</NoWarn>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DataExtensions.cs" />
-    <Compile Include="HIGHCONTRASTCOLOR.cs" />
-    <Compile Include="IntList.cs" />
-    <Compile Include="Native\HResult.cs" />
-    <Compile Include="Native\LoadLibraryExFlags.cs" />
-    <Compile Include="Native\LOGFONT.cs" />
-    <Compile Include="Native\MARGINS.cs" />
-    <Compile Include="Native\MessageResources.cs" />
-    <Compile Include="Native\NativeMethods.cs" />
-    <Compile Include="Native\POINT.cs" />
-    <Compile Include="Native\ResourceName.cs" />
-    <Compile Include="Native\ResourceNameMarshaler.cs" />
-    <Compile Include="Native\ResourceUnsafeNativeMethods.cs" />
-    <Compile Include="Native\SafeLocalMemHandle.cs" />
-    <Compile Include="Native\SafeModuleHandle.cs" />
-    <Compile Include="Native\SafeModuleHandleExtensions.cs" />
-    <Compile Include="Native\SafeThemeFileHandle.cs" />
-    <Compile Include="Native\UxThemeExNativeMethods.cs" />
-    <Compile Include="Native\UxColorScheme.cs" />
-    <Compile Include="Primitives.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Native\RECT.cs" />
-    <Compile Include="Native\SafeHandleZeroIsInvalid.cs" />
-    <Compile Include="Native\SafeThemeHandle.cs" />
-    <Compile Include="Native\SIZE.cs" />
-    <Compile Include="Native\ThemeSize.cs" />
-    <Compile Include="Native\StyleNativeMethods.cs" />
-    <Compile Include="ThemeFileLoader.cs" />
-    <Compile Include="ThemeInfo.cs" />
-    <Compile Include="TMT.cs" />
-    <Compile Include="VisualClassAttribute.cs" />
-    <Compile Include="VisualStatesAttribute.cs" />
-    <Compile Include="VisualStyleItems.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
