--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -16,27 +16,48 @@
     </references>
   </metadata>
   <files>
-    <file src="..\build\any\bin\PresentationTheme.Aero.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.xml" target="lib\netcoreapp3.0"/>
     <file src="PresentationTheme.Aero.targets" target="build"/>
     <file src="PresentationTheme.Aero\**\*.cs" target="src\PresentationTheme.Aero"/>
     <file src="PresentationTheme.Aero.Win8\**\*.cs" target="src\PresentationTheme.Aero.Win8"/>
