--- a/Source/PresentationTheme.Aero.targets
+++ b/Source/PresentationTheme.Aero.targets
@@ -1,11 +1,16 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <PresentationThemeTargetFramework Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">netcoreapp3.0</PresentationThemeTargetFramework>
+    <PresentationThemeTargetFramework Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">net45</PresentationThemeTargetFramework>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.Aero.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.AeroLite.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.HighContrast.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.Aero.Win10.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.AeroLite.Win10.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\net45\PresentationTheme.HighContrast.Win10.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.Aero.Win8.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.AeroLite.Win8.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.HighContrast.Win8.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.Aero.Win10.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.AeroLite.Win10.*"/>
+    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.HighContrast.Win10.*"/>
     <None Include="@(PresentationThemeAeroThemeAssembly)">
       <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
