--- a/Source/Samples/NetFxApp/NetFxApp.csproj
+++ b/Source/Samples/NetFxApp/NetFxApp.csproj
@@ -13,6 +13,7 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
     <OutputPath>$(OutputPath)Samples\NetFx\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -75,9 +76,37 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\PresentationTheme.Aero.Win10\PresentationTheme.Aero.Win10.csproj">
+      <Project>{a6e7c65f-98f7-4297-89ea-cad879719fd6}</Project>
+      <Name>PresentationTheme.Aero.Win10</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.Aero.Win7\PresentationTheme.Aero.Win7.csproj">
+      <Project>{8bb1d809-ea59-490f-9867-80e031ce691c}</Project>
+      <Name>PresentationTheme.Aero.Win7</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.Aero.Win8\PresentationTheme.Aero.Win8.csproj">
+      <Project>{d82a4175-763e-4591-8aa3-4bed74b57e32}</Project>
+      <Name>PresentationTheme.Aero.Win8</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.AeroLite.Win10\PresentationTheme.AeroLite.Win10.csproj">
+      <Project>{8c248e14-62ed-4061-b0fb-89a8696c7103}</Project>
+      <Name>PresentationTheme.AeroLite.Win10</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.AeroLite.Win8\PresentationTheme.AeroLite.Win8.csproj">
+      <Project>{09bbdc8e-6db2-4191-a101-62c3f8f0781a}</Project>
+      <Name>PresentationTheme.AeroLite.Win8</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\PresentationTheme.Aero\PresentationTheme.Aero.csproj">
-      <Project>{AEF7F7B0-A3F0-482A-A0E0-4D8782CABAA6}</Project>
+      <Project>{aef7f7b0-a3f0-482a-a0e0-4d8782cabaa6}</Project>
       <Name>PresentationTheme.Aero</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.HighContrast.Win10\PresentationTheme.HighContrast.Win10.csproj">
+      <Project>{55ef96dc-f991-42d9-b4d5-ae299aa380dc}</Project>
+      <Name>PresentationTheme.HighContrast.Win10</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PresentationTheme.HighContrast.Win8\PresentationTheme.HighContrast.Win8.csproj">
+      <Project>{9583bac9-d42a-4868-b566-19ff161eaf47}</Project>
+      <Name>PresentationTheme.HighContrast.Win8</Name>
     </ProjectReference>
     <ProjectReference Include="..\NetFxExtLib\NetFxExtLib.csproj">
       <Project>{ee962a54-f1fa-4460-b850-52ac389c451d}</Project>
